# scy-transfer_devent

./: Anchor.toml  README.md  package.json  scy-new-program-id.json
programs/scy-transfer/: Cargo.toml
programs/scy-transfer/src/: lib copy.rs  lib.rs
tests/: scy-transfer.ts
